--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "nesbot/carbon": "^2.16"
+        "nesbot/carbon": "^2.16",
+        "spatie/laravel-responsecache": "^5.0",
+        "tightenco/ziggy": "^0.6.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
