--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.16",
         "spatie/laravel-responsecache": "^5.0",
+        "spatie/laravel-sitemap": "^5.3",
         "tightenco/ziggy": "^0.6.9",
         "unisender/api-wrapper": "^1.4"
     },
