--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@ckeditor/ckeditor5-vue": "^1.0.0-beta.1",
         "@riophae/vue-treeselect": "0.0.38",
         "@sindresorhus/slugify": "^0.9.1",
+        "vue-ckeditor2": "^2.1.5",
         "vue-drag-tree": "^1.1.5",
         "vue-draggable-nested-tree": "^2.2.17",
         "vue-element-loading": "^1.1.1",
