--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@sindresorhus/slugify": "^0.9.1",
         "ckeditor": "^4.11.4",
         "vue-ckeditor2": "^2.1.5",
+        "vue-clipboard2": "^0.3.0",
         "vue-drag-tree": "^1.1.5",
         "vue-draggable-nested-tree": "^2.2.17",
         "vue-element-loading": "^1.1.1",
