--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
         "@riophae/vue-treeselect": "0.0.38",
         "@sindresorhus/slugify": "^0.9.1",
         "ckeditor": "^4.11.4",
+        "laravel-vue-pagination": "^2.3.0",
         "vue-ckeditor2": "^2.1.5",
         "vue-clipboard2": "^0.3.0",
         "vue-drag-tree": "^1.1.5",
         "vue-draggable-nested-tree": "^2.2.17",
         "vue-element-loading": "^1.1.1",
+        "vue-moment": "^4.0.0",
         "vue-nestable": "^2.3.2",
         "vue-swatches": "^1.0.3",
         "vue2-dropzone": "^3.5.8",
