--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
         "hemp/presenter": "^1.0",
+        "intervention/image": "^2.4",
+        "intervention/imagecache": "^2.3",
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
