--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,10 @@
 {
-    "/admin/js/app.js": "/admin/js/app.js?id=3245fe96528cf3b88bf1",
-    "/js/app.js": "/js/app.js?id=b3e47467c192bb0a901c",
-    "/css/app.css": "/css/app.css?id=5e8042ec0f677c6770f0",
-    "/admin/css/laraspace.css": "/admin/css/laraspace.css?id=edd2dcbcaaadf684f901"
+    "/admin/js/app.js": "/admin/js/app.js",
+    "/admin/js/app.js.map": "/admin/js/app.js.map",
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/admin/css/laraspace.css": "/admin/css/laraspace.css",
+    "/js/app.js.map": "/js/app.js.map",
+    "/css/app.css.map": "/css/app.css.map",
+    "/admin/css/laraspace.css.map": "/admin/css/laraspace.css.map"
 }
