--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,6 @@
 {
-    "/admin/js/app.js": "/admin/js/app.js",
-    "/admin/js/app.js.map": "/admin/js/app.js.map",
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/admin/css/laraspace.css": "/admin/css/laraspace.css",
-    "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map",
-    "/admin/css/laraspace.css.map": "/admin/css/laraspace.css.map"
+    "/admin/js/app.js": "/admin/js/app.js?id=e7f83f9fbb548004a274",
+    "/js/app.js": "/js/app.js?id=fe1f86b8615a7e3cfc47",
+    "/css/app.css": "/css/app.css?id=3146714ababf381a1667",
+    "/admin/css/laraspace.css": "/admin/css/laraspace.css?id=d739690720b195373561"
 }
