--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,8 +3,6 @@
     "/admin/js/app.js.map": "/admin/js/app.js.map",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/admin/css/laraspace.css": "/admin/css/laraspace.css",
     "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map",
-    "/admin/css/laraspace.css.map": "/admin/css/laraspace.css.map"
+    "/css/app.css.map": "/css/app.css.map"
 }
