--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,1 +1,6 @@
-{}
+{
+    "/admin/js/app.js": "/admin/js/app.js?id=d334877e2f4f076298a1",
+    "/js/app.js": "/js/app.js?id=219c17a694f8a114d514",
+    "/css/app.css": "/css/app.css?id=0733a77cd102be14decb",
+    "/admin/css/laraspace.css": "/admin/css/laraspace.css?id=df251d983f5df252e90e"
+}
