--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,15 +1,10 @@
 {
-<<<<<<< HEAD
     "/admin/js/app.js": "/admin/js/app.js",
     "/admin/js/app.js.map": "/admin/js/app.js.map",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/admin/css/laraspace.css": "/admin/css/laraspace.css",
     "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map"
-=======
-    "/admin/js/app.js": "/admin/js/app.js?id=d334877e2f4f076298a1",
-    "/js/app.js": "/js/app.js?id=219c17a694f8a114d514",
-    "/css/app.css": "/css/app.css?id=0733a77cd102be14decb",
-    "/admin/css/laraspace.css": "/admin/css/laraspace.css?id=df251d983f5df252e90e"
->>>>>>> dda55156f5b8800358095d998bc432d0becc87a0
+    "/css/app.css.map": "/css/app.css.map",
+    "/admin/css/laraspace.css.map": "/admin/css/laraspace.css.map"
 }
