--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,6 +2,11 @@ pipelines:
   branches:
     master:
       - step:
+          name: Deploy to test
+          deployment: test
+          script:
+            - echo "Deploying to test environment"
+      - step:
           name: Deploy to production server
           deployment: production
           trigger: manual
@@ -9,4 +14,4 @@ pipelines:
           script:
             - apk update --no-cache && apk add --no-cache openssh-client
             - curl -L https://deployer.org/releases/v$DEPLOYER_VERSION/deployer.phar > /usr/local/bin/dep && chmod +x /usr/local/bin/dep
-            - dep deploy
+            - dep deploy production
