--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,4 +14,4 @@ pipelines:
           script:
             - apk update --no-cache && apk add --no-cache openssh-client
             - curl -L https://deployer.org/releases/v$DEPLOYER_VERSION/deployer.phar > /usr/local/bin/dep && chmod +x /usr/local/bin/dep
-            - dep deploy production
+            - dep deploy
