--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "hemp/presenter": "^1.0",
         "intervention/image": "^2.4",
         "intervention/imagecache": "^2.3",
+        "jenssegers/date": "^3.5",
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
