--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "vue-element-loading": "^1.1.1",
         "vue-moment": "^4.0.0",
         "vue-nestable": "^2.3.2",
+        "vue-social-sharing": "^2.4.3",
         "vue-swatches": "^1.0.3",
         "vue2-dropzone": "^3.5.8",
         "vuex": "^3.1.0"
