--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
         "vue": "^2.5.17",
         "vue-router": "^2.7",
         "vue-template-compiler": "^2.6.10",
-        "vuelidate": "^0.6.1"
+        "vuelidate": "^0.6.1",
+        "webpack": "^4.30.0"
     },
     "dependencies": {
         "@riophae/vue-treeselect": "0.0.38",
         "@sindresorhus/slugify": "^0.9.1",
+        "ckeditor": "^4.11.4",
         "laravel-vue-pagination": "^2.3.0",
         "vue-ckeditor2": "^2.1.5",
         "vue-clipboard2": "^0.3.0",
